# leaderboard-rust

./: Cargo.toml  README.md
migrations/2023-08-26-031710_leaderboards/: up.sql
src/: elo.rs  handler.rs  lib.rs  main.rs  models.rs  route.rs  schema.rs  schemas
